# python-ks-mesoscaler

./: FILE_STRUCTURE.md  HOWTO.md  LICENSE  README.md  setup.cfg
mesoscaler/: __init__.py  __main__.py  atlas.py  defaults.py  fileutils.py  images.py  libwrapper.py  misc.py  packaging.py  procs.py  project.py  rois.py  typing.py
mesoscaler/commands/: __init__.py  atlas_alignment_step.py  collection_step.py  image_collection_step.py  landmark_prediction_step.py  packaging_step.py  process.py  roi_generation_step.py  root.py  validate.py
mesoscaler/data/: Annotation.csv  as_masks.ijm  output_to_hdf.ipynb
mesoscaler/landmarks/: __init__.py  affine.py  alignment.py  base.py  paths.py  prediction.py  reference.py
resources/: workflow.drawio
