[metadata]
name = ks-mesoscaler
version = 0.1.0
author = Keisuke Sehara
author_email = keisuke.sehara@gmail.com
description = Tools for analysis incorporating CEBRA
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/gwappa/python-ks-mesoscaler
project_urls =
    Bug Tracker = https://github.com/gwappa/python-ks-mesoscaler/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
packages = find:
python_requires = >=3.7
install_requires =
    deeplabcut
    Pillow
    imageio

[options.packages.find]
where =

[options.package_data]
mesoscaler =
    data/*.h5
    data/*.png

[flake8]
ignore =
    E501
    E221
    E712
